test: add kotest,mockk and coroutines test